2017-10-26  Andy Estes  <aestes@apple.com>

        [Payment Request] Enable Payment Request whenever Apple Pay is enabled
        https://bugs.webkit.org/show_bug.cgi?id=178880

        Reviewed by Tim Horton.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetPreferencesToConsistentValues):

2017-10-26  Joseph Pecoraro  <pecoraro@apple.com>

        Add and update some watchlists
        https://bugs.webkit.org/show_bug.cgi?id=178304

        Reviewed by Simon Fraser.

        * Scripts/webkitpy/common/config/watchlist:

2017-10-26  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, rolling out r223984.

        Caused LayoutTest assertion failures.

        Reverted changeset:

        "When navigating back to a page, compositing layers may not
        use accelerated drawing"
        https://bugs.webkit.org/show_bug.cgi?id=178749
        https://trac.webkit.org/changeset/223984

2017-10-26  Christopher Reid  <chris.reid@sony.com>

        Remove scopeguard from platform
        https://bugs.webkit.org/show_bug.cgi?id=178681

        Reviewed by Brady Eidson.

        * TestWebKitAPI/Tests/WebCore/FileMonitor.cpp:

2017-09-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        WebDriver: Add support to import and run W3C tests
        https://bugs.webkit.org/show_bug.cgi?id=177304

        Reviewed by Brian Burg.

        WPT has now several WebDriver tests, and new ones are going to be added to cover the whole spec. This patch
        adds the initial support for running W3C tests. The script import-w3c-webdriver-tests reuses parts of the W3C
        test downloader to download the tests and required tools from WPT repository into WebDriverTests
        directory. Tests can be run with run-webdriver-tests, a new script that works similar to other test runner
        scripts. For now it shows a summary at the end of the execution, there aren't expectations yet, since we are not